--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -3,6 +3,7 @@
   "home": "Home",
   "dashboard": "Dashboard",
   "explore": "Explore",
+  "blog": "Blog",
   "signIn": "Sign In",
   "signOut": "Sign Out",
   "profile": "Profile",
