--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -3,6 +3,7 @@
   "home": "ホーム",
   "dashboard": "ダッシュボード",
   "explore": "探索",
+  "blog": "ブログ",
   "signIn": "ログイン",
   "signOut": "ログアウト",
   "profile": "プロフィール",
