--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -3,6 +3,7 @@
   "home": "首页",
   "dashboard": "仪表盘",
   "explore": "探索",
+  "blog": "博客",
   "signIn": "登录",
   "signOut": "退出",
   "profile": "个人资料",
