--- a/locales/ja/career.json
+++ b/locales/ja/career.json
@@ -30,5 +30,14 @@
     "sort": "整理",
     "share": "共有",
     "delete": "削除"
+  },
+  "graphComplete": {
+    "title": "おめでとうございます！",
+    "message": "このキャリアパスのすべてのスキルをマスターしました！より高度なスキルでスキルツリーを拡張しますか？",
+    "expand": "高度なスキルで拡張",
+    "later": "また後で",
+    "expanding": "高度なスキルを生成中...",
+    "expandSuccess": "{count}個の新しい高度なスキルを追加しました！",
+    "expandFailed": "高度なスキルの生成に失敗しました"
   }
 }
